--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -28,10 +30,12 @@
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
       <!-- Insert header information here -->
+      <h1>About Us</h1>
+      Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://img.freepik.com/free-vector/anonymous-avatars-grey-circles_78370-2086.jpg?t=st=1744747228~exp=1744750828~hmac=995faf39332c57b01d70d664d820f04eee04f1121440c38968816cb4737d52a3&w=740" alt="Card image">
         <div class="card-body">
           <p class="title">Person1</p>
           <p>Person1 Title</p>
@@ -41,7 +45,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://img.freepik.com/free-vector/anonymous-avatars-grey-circles_78370-2086.jpg?t=st=1744747228~exp=1744750828~hmac=995faf39332c57b01d70d664d820f04eee04f1121440c38968816cb4737d52a3&w=740" alt="Card image">
         <div class="card-body">
           <p class="title">Person2</p>
           <p>Person2 Title</p>
@@ -51,7 +55,7 @@
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="https://img.freepik.com/free-vector/anonymous-avatars-grey-circles_78370-2086.jpg?t=st=1744747228~exp=1744750828~hmac=995faf39332c57b01d70d664d820f04eee04f1121440c38968816cb4737d52a3&w=740" alt="Card image">
         <div class="card-body">
           <p class="title">Person3</p>
           <p>Person3 Title</p>
